[package]
name = "rask-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
dioxus = { version = "0.2.4", features = ["router", "web"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
wasm-cookies = "0.2.0"
web-sys = { version = "0.3.60", features = ["Window", "HtmlDocument"] }
wasm-bindgen = "0.2.83"
async-std = "1.12.0"
reqwest = { version = "0.11.13", features = ["cookies", "json", "serde_json"] }
cookie_store = "0.19.0"
